infra/vpc/istio/test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/use-waypoint: waypoint
    istio.io/dataplane-mode: ambient
  name: istio-egress
